# web-benchmarking

./: .gitignore  Dockerfile  README.md  alexa.py  benchmark.py  main.py  max_age_plotter.py  pyproject.toml  requirements.txt  startup.py  statistics.py  statistics2.py  storage.py
load_testing/: controller.py  entrypoint.py  load_tester.py  time_faker.py
self_hosting/: download.py  entrypoint.py  wget.py
shared/: exceptions.py  logging.py  normalizer.py
startup/: startup.py
statistics/: consts.py  directory_resolver.py  downloader.py  http_object.py  interfaces.py  main.py  object_resolver.py  site_list_providers.py  stats.py  utils.py
statistics/downlaoder/: wget.py
