[project]
name = "web-benchmarking"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "asttokens==2.4.1",
    "attrs==24.2.0",
    "beautifulsoup4==4.12.3",
    "blinker==1.7.0",
    "brotli==1.1.0",
    "certifi==2024.7.4",
    "cffi==1.17.0",
    "charset-normalizer==3.3.2",
    "contourpy==1.3.0",
    "cryptography==43.0.0",
    "cycler==0.12.1",
    "decorator==5.1.1",
    "exceptiongroup==1.2.2",
    "executing==2.1.0",
    "fonttools==4.53.1",
    "h11==0.14.0",
    "h2==4.1.0",
    "hpack==4.0.0",
    "hyperframe==6.0.1",
    "idna==3.8",
    "ipython==8.27.0",
    "jedi==0.19.1",
    "kaitaistruct==0.10",
    "kiwisolver==1.4.5",
    "matplotlib==3.9.2",
    "matplotlib-inline==0.1.7",
    "numpy==2.1.0",
    "outcome==1.3.0.post0",
    "packaging==24.1",
    "pandas==2.2.3",
    "parso==0.8.4",
    "pexpect==4.9.0",
    "pillow==10.4.0",
    "prompt-toolkit==3.0.47",
    "ptyprocess==0.7.0",
    "pure-eval==0.2.3",
    "pyasn1==0.6.0",
    "pycparser==2.22",
    "pygments==2.18.0",
    "pyopenssl==24.2.1",
    "pyparsing==3.1.4",
    "pysocks==1.7.1",
    "python-dateutil==2.9.0.post0",
    "pytz==2024.1",
    "requests==2.31.0",
    "selenium==4.24.0",
    "selenium-wire==5.1.0",
    "setuptools>=75.8.2",
    "six==1.16.0",
    "sniffio==1.3.1",
    "sortedcontainers==2.4.0",
    "soupsieve==2.6",
    "stack-data==0.6.3",
    "traitlets==5.14.3",
    "trio==0.26.2",
    "trio-websocket==0.11.1",
    "typing-extensions==4.12.2",
    "tzdata==2024.1",
    "urllib3==2.2.2",
    "wcwidth==0.2.13",
    "websocket-client==1.8.0",
    "wsproto==1.2.0",
    "zstandard==0.23.0",
]
